poke/testsuite/poke.pkl/map-diag-6.pk
/* { dg-do compile } */

deftype Foo = struct { int i; any[] a; };

Foo @ 0#B; /* { dg-error "" } */
